--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'com.github.tomakehurst:wiremock-jre8-standalone:2.35.0'
+    testImplementation 'com.github.tomakehurst:wiremock-jre8-standalone:2.35.+'
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0-M1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0-M1'
@@ -91,3 +91,6 @@ jar {
     }
 }
 
+dependencyLocking {
+    lockAllConfigurations()
+}
