--- a/build.gradle
+++ b/build.gradle
@@ -23,52 +23,52 @@ dependencies {
 
     // LOGGING
     api 'ch.qos.logback:logback-classic:1.4.7'
-    api 'net.logstash.logback:logstash-logback-encoder:7.3'
-
-    api 'com.squareup.okhttp3:okhttp:5.0.0-alpha.11'
-    implementation 'commons-io:commons-io:1.3.2'
-    implementation 'org.json:json:20230227'
-    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
-    implementation 'org.apache.commons:commons-lang3:3.12.0'
-    implementation 'com.google.guava:guava:31.1-jre'
-    compileOnly 'org.aspectj:aspectjweaver:1.9.19'
-
-    // TRACING
-    api 'io.opentelemetry:opentelemetry-api:1.26.0'
-    implementation 'io.micrometer:micrometer-tracing-bridge-otel:1.1.1'
-    implementation 'io.opentelemetry.instrumentation:opentelemetry-jdbc:1.19.2-alpha'
-
-    // METRICS
-    api 'io.micrometer:micrometer-registry-prometheus:1.11.0'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
-
-    // Not exposed
-    compileOnly 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.springframework.boot:spring-boot-starter-security'
-
-    // HELPER
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    annotationProcessor 'org.projectlombok:lombok:1.18.26'
-    compileOnly 'org.projectlombok:lombok:1.18.26'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'
-    testCompileOnly 'org.projectlombok:lombok:1.18.26'
-
-    // TEST
-    testRuntimeOnly 'org.aspectj:aspectjweaver'
-    testImplementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.springframework.boot:spring-boot-starter-security'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'com.github.tomakehurst:wiremock-jre8-standalone:2.35.+'
-    testImplementation 'org.assertj:assertj-core:3.24.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0-M1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0-M1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0-M1'
-    testImplementation 'io.grpc:grpc-api:1.55.1'
-    testImplementation 'io.grpc:grpc-services:1.55.1'
-    testImplementation 'io.grpc:grpc-stub:1.55.1'
-    testImplementation 'io.grpc:grpc-netty:1.55.1'
-    testImplementation 'com.google.protobuf:protobuf-java:4.0.0-rc-2'
-    testImplementation 'org.awaitility:awaitility:4.2.0'
+//    api 'net.logstash.logback:logstash-logback-encoder:7.3'
+//
+//    api 'com.squareup.okhttp3:okhttp:5.0.0-alpha.11'
+//    implementation 'commons-io:commons-io:1.3.2'
+//    implementation 'org.json:json:20230227'
+//    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
+//    implementation 'org.apache.commons:commons-lang3:3.12.0'
+//    implementation 'com.google.guava:guava:31.1-jre'
+//    compileOnly 'org.aspectj:aspectjweaver:1.9.19'
+//
+//    // TRACING
+//    api 'io.opentelemetry:opentelemetry-api:1.26.0'
+//    implementation 'io.micrometer:micrometer-tracing-bridge-otel:1.1.1'
+//    implementation 'io.opentelemetry.instrumentation:opentelemetry-jdbc:1.19.2-alpha'
+//
+//    // METRICS
+//    api 'io.micrometer:micrometer-registry-prometheus:1.11.0'
+//    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+//
+//    // Not exposed
+//    compileOnly 'org.springframework.boot:spring-boot-starter-web'
+//    compileOnly 'org.springframework.boot:spring-boot-starter-security'
+//
+//    // HELPER
+//    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+//    annotationProcessor 'org.projectlombok:lombok:1.18.26'
+//    compileOnly 'org.projectlombok:lombok:1.18.26'
+//    testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'
+//    testCompileOnly 'org.projectlombok:lombok:1.18.26'
+//
+//    // TEST
+//    testRuntimeOnly 'org.aspectj:aspectjweaver'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-web'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-security'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    testImplementation 'com.github.tomakehurst:wiremock-jre8-standalone:2.35.+'
+//    testImplementation 'org.assertj:assertj-core:3.24.2'
+//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0-M1'
+//    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0-M1'
+//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0-M1'
+//    testImplementation 'io.grpc:grpc-api:1.55.1'
+//    testImplementation 'io.grpc:grpc-services:1.55.1'
+//    testImplementation 'io.grpc:grpc-stub:1.55.1'
+//    testImplementation 'io.grpc:grpc-netty:1.55.1'
+//    testImplementation 'com.google.protobuf:protobuf-java:4.0.0-rc-2'
+//    testImplementation 'org.awaitility:awaitility:4.2.0'
 
 }
 
